MGMT-6769: Allows the users to choose OVN/SDN
refactor: Renames networkingType to managedNetworking


refactor: Removes generic parameter from RadioField


MGMT-6769: Allows the users to select SDN/OVN


refactor: Adds Optional ambient type


refactor: Marks the RadioField's id prop as optional


refactor: Reflects adv networking checkbox state as networkType value changes


refactor: Overrides networkType auto-assign with OVNKubernetes


refactor: updates swagger.yaml

refactor: Removes the ids

refactor: Updates swagger


refactor: w/o auto-assign


Update src/common/components/clusterConfiguration/AdvancedNetworkFields.tsx
Update src/common/components/clusterWizard/networkingSteps/NetworkTypeControlGroup.tsx

Update src/common/components/ui/formik/RadioField.tsx
