# src/common/api/swagger.yaml
@@ -119,6 +119,12 @@ paths:
           type: array
           items:
             type: string
+        - in: query
+          name: with_hosts
+          description: Include hosts in the returned list.
+          type: boolean
+          allowEmptyValue: true
+          default: false
       responses:
         '200':
           description: Success.
@@ -3450,7 +3456,14 @@ definitions:
         type: integer
       installation_disk_speed_threshold_ms:
         type: integer
-
+      network_latency_threshold_ms:
+        type: number
+        format: double
+        x-nullable: true
+      packet_loss_percentage:
+        type: number
+        format: double
+        x-nullable: true
   event-list:
     type: array
     items:
@@ -3954,6 +3967,11 @@ definitions:
         description: Enable/disable hyperthreading on master nodes, worker nodes, or all nodes.
         enum: ['masters', 'workers', 'none', 'all']
         default: 'all'
+      network_type:
+        type: string
+        description: 'The desired network type used.'
+        enum: ['OpenShiftSDN', 'OVNKubernetes']
+        default: 'OpenShiftSDN'
 
   cluster-update-params:
     type: object
@@ -4119,6 +4137,11 @@ definitions:
         type: string
         description: Enable/disable hyperthreading on master nodes, worker nodes, or all nodes.
         enum: ['masters', 'workers', 'all', 'none']
+        x-nullable: true
+      network_type:
+        type: string
+        description: The desired network type used.
+        enum: ['OpenShiftSDN', 'OVNKubernetes']
         x-nullable: true
 
   add-hosts-cluster-create-params:
@@ -4412,6 +4435,11 @@ definitions:
         type: string
         description: JSON-formatted string containing the usage information by feature name
         x-go-custom-tag: gorm:"type:text"
+      network_type:
+        type: string
+        description: The desired network type used.
+        enum: ['OpenShiftSDN', 'OVNKubernetes']
+        x-nullable: true
 
   image_info:
     type: object
@@ -5258,6 +5286,7 @@ definitions:
       - 'lso-requirements-satisfied'
       - 'ocs-requirements-satisfied'
       - 'cnv-requirements-satisfied'
+      - 'network-type-valid'
 
   logs_type:
     type: string
